// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GroupInvitationJoin > Show simple 1`] = `
"<div class="container mx-auto px-1 mb-6">
  <div>
    <h1>Join a group</h1>
    <div>
      <p class="my-1">Do you want to join the group <span>"<b>mygroup</b>"</span> with the profile <span>"<b>test</b>"</span> ?</p>
      <p class="my-1">You can create a new profile or change the actual profile with the top menu.</p><button data-oruga="button" type="button" role="button" tabindex="0" class="o-button o-button--primary"><span class="o-button__wrapper"><!----><span class="o-button__label">Join group</span>
        <!----></span>
      </button>
    </div>
  </div>
</div>"
`;

exports[`GroupInvitationJoin > Show simple 2`] = `
"<div class="container mx-auto px-1 mb-6">
  <div>
    <h1>Join a group</h1>
    <div>
      <transition-stub name="fade" appear="false" persisted="false" css="true">
        <article data-oruga="notification" class="o-notification o-notification--success o-notification--top">
          <!---->
          <div class="o-notification__wrapper"><span data-oruga="icon" class="o-icon o-icon--large o-notification__icon" aria-hidden="true"><i class="mdi mdi-check-circle mdi-48px"></i></span>
            <div class="o-notification__content">You successfully joined the group <span>"<b>mygroup</b>"</span> with your profile <span>"<b>test</b>"</span>.</div>
          </div>
        </article>
      </transition-stub><a href="/@mygroup" class="o-button o-button--primary" data-oruga="button" role="button" tabindex="0"><span class="o-button__wrapper"><!----><span class="o-button__label">Go to the group page</span>
        <!----></span>
      </a>
    </div>
  </div>
</div>"
`;
